--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "aos": "^2.3.4",
-    "axios": "^1.6.0",
+    "axios": "^1.6.1",
     "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
+    "hooks": "^0.3.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
