--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.11.0",
+    "react-image-gallery": "^1.3.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0",
